RESOLVED FIXED194689
Performance should not fire events when its context is stopped
https://bugs.webkit.org/show_bug.cgi?id=194689
Summary Performance should not fire events when its context is stopped
youenn fablet
Reported 2019-02-14 18:44:38 PST
Performance should not fire events when its context is stopped
Attachments
Patch (1.65 KB, patch)
2019-02-14 18:54 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-02-14 18:54:13 PST
youenn fablet
Comment 2 2019-02-14 18:54:34 PST
WebKit Commit Bot
Comment 3 2019-02-15 11:06:53 PST
Comment on attachment 362091 [details] Patch Clearing flags on attachment: 362091 Committed r241598: <https://trac.webkit.org/changeset/241598>
WebKit Commit Bot
Comment 4 2019-02-15 11:06:55 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-02-15 11:11:56 PST
Note You need to log in before you can comment on or make changes to this bug.