Performance should not fire events when its context is stopped https://bugs.webkit.org/show_bug.cgi?id=194689

Reviewed by Alex Christensen.

Stop the timer when its context is destroyed.
Add an assertion to ensure the timer does not fire after context is destroyed.

* page/Performance.cpp:
(WebCore::Performance::stop):


Canonical link: https://commits.webkit.org/209096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241598 268f45cc-cd09-0410-ab3c-d52691b4dbfc